# fast_zero

./: .gitignore  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  settings.py  teste.py
fast_zero/fast_zero/: app.py
migrations/: env.py
migrations/versions/: 2664fbcfde92_create_users_table.py  2b89ad44aa35_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
